[auto-9][add] category add
