# internal/service/dto/products_dto.go
@@ -1,6 +1,9 @@
 package dto
 
-import "autoshop/internal/domain/models"
+import (
+	"autoshop/internal/domain/models"
+	"github.com/google/uuid"
+)
 
 type GetProductsDto struct {
 	Products []models.Product `json:"products"`
@@ -8,4 +11,10 @@ type GetProductsDto struct {
 
 type GetCategoriesDto struct {
 	Categories []models.Category `json:"categories"`
+}
+
+type CreateCategoryDto struct {
+	Title      string `form:"title" validate:"required"`
+	ProductIds []uuid.UUID
+	ImageId    uuid.UUID `json:"-"`
 }
